tests/expectations/compiler/structs/struct_function_namespace_conflict_fail.out
Error [EAST0372007]: struct `Foo` shadowed by
    --> compiler-test:7:5
     |
   7 |     function Foo() {}
     |     ^^^^^^^^^^^^^^^^^
